<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">icountyKE</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="contentDescription">image</string>

    <!-- splash screen -->
    <string name="splash_banner">iCountyKE</string>
    <string name="splash_ichat">iChat. </string>
    <string name="splash_iconnect">iConnect. </string>
    <string name="splash_icount">iCount</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- main activity -->
    <string name="title_activity_main">@string/app_name</string>
    <string name="subtitle_activity_main">Isiolo County</string>
    <string name="action_compose_new">Compose Message</string>

    <!-- public stream frag -->
    <string name="lbl_sender_name">Benard Adongo</string>
    <string name="lbl_sender_phone">+254714XXX696</string>
    <string name="lbl_sender_text">Security ni mbaya huku kwetu &amp; no boreholes. Please expedite this.</string>
    <string name="lbl_sender_time">3 Jun</string>
    <string name="lbl_sender_comment_count">3 Comments</string>
    <string name="lbl_sender_message_type">SMS</string>

    <!-- profile frag -->
    <string name="lbl_profile_name">Mimi Mwenyewe</string>
    <string name="lbl_profile_position">Governor</string>
    <string name="lbl_profile_county">Isiolo County</string>
    <string name="lbl_recent_posts">Recent Posts</string>

    <!-- view message activity -->
    <string name="title_activity_view_message">View Message</string>
    <string name="action_attach">Attach</string>
    <string name="action_attach_video">Video</string>
    <string name="action_attach_audio">Audio</string>
    <string name="action_attach_pic">Picture</string>

    <!-- chat responses -->
    <string name="lbl_my_response">Hi Concerned Citizen, we\'re prioritizing the issue of water shortage. We already have plans underway to beef up security blah blah blah</string>
    <string name="hint_new_message">Type Message</string>
    
    <!--compose message -->
    <string name="title_activity_compose_message">Compose Message</string>
    <string name="action_forward">Forward</string>
    <string name="action_broadcast">Broadcast</string>
    <string name="hint_compose_message">What\'s new?</string>

</resources>
