<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nikohapa.icountyke.ui.frags.ProfileFragment"
    android:paddingRight="5dp"
    android:paddingLeft="5dp"
    android:paddingTop="5dp"
    android:background="@color/profile_bg_color">

    <!--top section -->
    <LinearLayout
        android:id="@+id/section_user_dets"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@drawable/profile_bg">

        <ImageView
            android:id="@+id/img_user_profPic"
            android:src="@drawable/person_image_empty"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/contentDescription"
            android:layout_width="90dp"
            android:layout_height="90dp" />

        <LinearLayout
            android:layout_marginLeft="5dp"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_user_name"
                android:text="@string/lbl_profile_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_user_position"
                android:text="@string/lbl_profile_position"
                android:textSize="17sp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_user_county"
                android:text="@string/lbl_profile_county"
                android:textSize="17sp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/section_user_dets"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <TextView
            android:text="@string/lbl_recent_posts"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/postsListView"
            android:divider="@null"
            android:dividerHeight="10dp"
            android:listSelector="@android:color/transparent"
            android:cacheColorHint="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="2dp"
            android:choiceMode="singleChoice"
            android:fadeScrollbars="true"
            android:clipToPadding="false"
            android:headerDividersEnabled="true"
            android:footerDividersEnabled="true"
            android:scrollbarStyle="outsideOverlay"/>

    </LinearLayout>

</RelativeLayout>
